--- a/runsetup.yml
+++ b/runsetup.yml
@@ -15,4 +15,4 @@
             prompt: "Enter your FQDN"
             private: no
   roles:
-          - satellite_6.4_beta
+          - satellite6.4Beta
